--- a/src/main/webapp/tasks.html
+++ b/src/main/webapp/tasks.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Checkmate - Tasks</title>
+    <link rel="stylesheet" href="style.css">
+    
     <script>
         
         //Create new tasks
